--- a/css/styles.css
+++ b/css/styles.css
@@ -57,7 +57,7 @@ nav {
 
 /* Services section */
 .services {
-  background-color: #f4f4f4;
+  /* background-color: #f4f4f4; */
   padding: 50px 0;
   text-align: center;
 }
