--- a/css/styles.css
+++ b/css/styles.css
@@ -111,10 +111,12 @@ nav {
   background-color: #333;
   color: white;
   text-decoration: none;
+  border-radius: 12px;
+  box-shadow: 0px 2px 6px 1px rgba(0, 0, 0, 0.20);
 }
 
 .service-card .btn:hover {
-  background-color: #f09d51;
+  background-color: #faacc6;
 }
 
 .service-card.disabled {
@@ -205,14 +207,18 @@ nav {
   background-color: #333;
   color: white;
   text-decoration: none;
+  border-radius: 12px;
+  box-shadow: 0px 2px 6px 1px rgba(0, 0, 0, 0.20);
 }
 
 .project-card .btn:hover {
-  background-color: #f09d51;
+  /* background-color: #f09d51; */
+  background-color: #faacc6;
 }
 
 /* About Section */
 .about {
+  background: #faf2ac;
   padding: 50px 20px;
   text-align: center;
 }
@@ -542,10 +548,13 @@ footer {
   background-color: #333;
   color: white;
   text-decoration: none;
+  border-radius: 12px;
+  box-shadow: 0px 2px 6px 1px rgba(0, 0, 0, 0.20);
 }
 
 .btech-project-card .btn:hover {
-  background-color: #f09d51;
+  /* background-color: #f09d51; */
+  background-color: #faacc6;
 }
 
 .btech-project-card:hover {
@@ -639,10 +648,13 @@ footer {
   background-color: #333;
   color: white;
   text-decoration: none;
+  border-radius: 12px;
+  box-shadow: 0px 2px 6px 1px rgba(0, 0, 0, 0.20);
 }
 
 .mtech-project-card .btn:hover {
-  background-color: #f09d51;
+  /* background-color: #f09d51; */
+  background-color: #faacc6;
 }
 
 .mtech-project-card:hover {
@@ -742,8 +754,80 @@ footer {
   background-color: #333;
   color: white;
   text-decoration: none;
+  border-radius: 12px;
+  box-shadow: 0px 2px 6px 1px rgba(0, 0, 0, 0.20);
 }
 
 .project-card .btn:hover {
-  background-color: #f09d51;
+  /* background-color: #f09d51; */
+  background-color: #faacc6;
+}
+
+/*Contact button*/
+.contact-button{
+  position: fixed;
+  right: 0vw;
+  z-index: 1000;
+  top: 60vh;
+  box-shadow: 0px 2px 6px 1px rgba(0, 0, 0, 0.20);
+  border-radius: 10px;
+  color: white;
+  background-color: rgba(255, 174, 0, 1);
+  font-weight: 700;
+}
+
+/* Enquiry form */
+.enquiry-container {
+  max-width: 600px;
+  margin: 2rem auto;
+  padding: 1.5rem;
+  border: 1px solid #ddd;
+  box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+}
+
+h2 {
+  text-align: center;
+  color: #333;
+}
+
+label {
+  display: block;
+  margin-bottom: 0.5rem;
+  font-weight: bold;
+}
+
+.required {
+  color: red;
+  margin-left: 2px;
+}
+
+input, textarea, select {
+  width: 100%;
+  padding: 0.5rem;
+  margin-bottom: 1rem;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  font-size: 1rem;
+}
+
+button {
+  background-color: #e91e63;
+  color: white;
+  border: none;
+  padding: 0.7rem;
+  width: 100%;
+  cursor: pointer;
+  font-size: 1rem;
+  font-weight: bold;
+  border-radius: 4px;
+}
+
+button:hover {
+  background-color: #faacc6;
+}
+
+.error {
+  color: red;
+  font-size: 0.9rem;
+  display: none;
 }
