--- a/css/styles.css
+++ b/css/styles.css
@@ -18,6 +18,11 @@ header {
   background-color: black;
   color: white;
   padding: 10px 0;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 1000;
 }
 
 nav {
